[package]
name = "phirs"
version = "0.1.0"
edition = "2021"

authors = ["liquidhelium", "liquidhelium@163.com"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bisection = "0.1.0"
serde = "*"
serde_derive = "*"
serde_json = "*"
ggez = "0.7"
glam = "*"
mint = "*"